--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,8 @@
+@font-face {
+    font-family: 'Classic Console Neue';
+    src: url(./assets/fonts/clacon2.ttf) format("truetype");
+}
+
 * {
     margin: 0;
     pad: 0;
